# AoC2024

./: CMakeLists.txt  Day1.cpp  Day1.h  Day2.cpp  Day2.h  Day3.cpp  Day3.h  Day4.cpp  Day4.h  Day5.cpp  Day5.h  GenUtil.cpp  GenUtil.h  main.cpp
